# steam-config-nix

./: README.md  flake.nix  lib.nix  options.md  readme.md
checks/: default.nix
modules/: default.nix  home-manager.nix  lib.nix  nixos.nix  steam-config.nix  steam-launch.nix  steam-localconfig.nix
modules/submodules/: app.nix  apps-option.nix  base-app.nix  non-steam-app.nix  root-options.nix  steam-app.nix  users-option.nix
pkgs/: default.nix
pkgs/cython/: default.nix
pkgs/docs/: package.nix
pkgs/meson/: default.nix
pkgs/meson-python/: default.nix
pkgs/srctools/: default.nix  package.nix
pkgs/steam-config-patcher/: package.nix  vdf-int-fix.diff
pkgs/steam-launch-setter/: default.nix
pkgs/steamlc-patcher/: package.nix
pkgs/useful-types/: default.nix  package.nix
src/: pyproject.toml
src/steam_config_patcher/: compat.py  fileio.py  files.py  files_manifest.py  grid.py  icons.py  json_manifest.py  main.py  manifest.py  patcher.py  steam.py  types.py
src/steam_config_patcher/formats/: binary_keyvalues.py  keyvalues.py
src/steam_config_patcher/vdf/: appinfo.py  binary.py  text.py
src/steamlc_patcher/: main.py
src/tests/: conftest.py  test_binary_keyvalues.py  test_compat.py  test_files.py  test_files_manifest.py  test_grid.py  test_icons.py  test_keyvalues.py  test_main.py  test_manifest.py  test_patcher.py  test_steam.py  test_vdf_appinfo.py  test_vdf_binary.py  test_vdf_text.py
steam-launch-setter/: pyproject.toml
steam-launch-setter/steam_launch_setter/: main.py
