[project]
name = "steam-config-patcher"
version = "0.4.0"
description = "Patch Steam vdf files using JSON input"
authors = [{ name = "different-name", email = "hello@different-name.dev" }]
dependencies = ["pydantic", "psutil", "pillow"]
requires-python = ">=3.10"
license = { text = "GPL-3.0" }

[project.scripts]
steam-config-patcher = "steam_config_patcher.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
