[project]
name = "steam-launch-setter"
version = "0.1.0"
description = "A tool to set launch options in Steam's localconfig.vdf"
authors = [{ name = "different-name", email = "hello@different-name.dev" }]
dependencies = ["srctools"]
requires-python = ">=3.9"
license = { text = "GPL-3.0" }

[project.scripts]
steam-launch-setter = "steam_launch_setter.main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
